--- a/views/templates/code.html
+++ b/views/templates/code.html
@@ -97,7 +97,7 @@
     To start, <span class="codeBit">npm install express socket.io --save</span>. Then spin up your app with some boilerplate code:
   </div>
 
-  <pre><div class="code" layout layout-align="center center">var express = require('express');
+  <pre><code layout layout-align="center center">var express = require('express');
 var app = express();
 var http = require('http').Server(app);
 var io = require('socket.io')(http);
@@ -109,16 +109,16 @@ app.get('/', function(req, res){
 http.listen(3000, function(){
   console.log('listening on *:3000');
 });
-  </div></pre>
+  </code></pre>
 
   <div class="blogText">
     Then we can declare a global function, <span class="codeBit">io.on('connection', function(socket){ });</span>, inside of which we can place our socket controllers, like so:
   </div>
 
-  <pre><div class="code" layout layout-align="center center">socket.on('logon', function() {
+  <pre><code layout layout-align="center center">socket.on('logon', function() {
     userIds.push(socket.id);
     io.emit('ids', userIds);
-  });</div></pre>
+  });</code></pre>
 
   <div class="blogText">
     These functions may take in parameters (data from the client-side event that triggers the server-side socket event-handler), but they needn't. In this case, we're grabbing the ID assigned to this particular client-server socket connection and storing it in a global array. Finally, we <span class="codeBit">emit</span> back to each client a response: in this case, the array of all online users.
@@ -132,14 +132,14 @@ http.listen(3000, function(){
     Our client-side code looks something like this (I'm using jQuery to enable user interaction with the page):
   </div>
 
-  <pre><div class="code" layout layout-align="center center">      &lt;script src="/socket.io/socket.io.js"><&lt;/script>
+  <pre><code layout layout-align="center center">      &lt;script src="/socket.io/socket.io.js"><&lt;/script>
       &lt;script src="https://code.jquery.com/jquery-1.11.1.js">&lt;/script>
       &lt;script>
         $(function () {
           var socket = io();
           socket.emit('logon');
         });
-      &lt;/script></div></pre>
+      &lt;/script></code></pre>
 
   <div class="blogText">
     Whenever a user visits the site, pinging the server, a socket-connection is initiated, and the client <span class="codeBit">emits</span> to the server, triggering the 'logon' event-handler. As we saw above, this initiates a process on the server that <span class="codeBit">emits</span> back out to each client an updated list of online users.
@@ -149,13 +149,25 @@ http.listen(3000, function(){
     We'll want to update this list when a user disconnects as well ('disconnect' is a keyword in Socket.io: we don't have to define this event on the client-side):
   </div>
 
-  <pre><div class="code" layout layout-align="center center">socket.on('disconnect', function(){
+  <pre><code layout layout-align="center center">socket.on('disconnect', function(){
     userIds.splice(userIds.indexOf(socket.id), 1);
     io.emit('ids', userIds);
-  });</div></pre>
+  });</code></pre>
 
   <div class="blogText">
-    
+    The next step would be to handle the 'ids' event we wrote earlier (in the server) on the client-side. We do this in exactly the same way that we handled, on the server-side, events triggered by the client. We write <span class="codeBit">socket.on('ids', function(allIds) { });</span>, and inside our callback function we manipulate the page based on the data received from the server ('allIds'). In this case, we want to append a list of all online users (excluding the current user, who we identify with <span class="codeBit">socket.id</span>) to the DOM, and an 'Invite' button for each user.
+  </div>
+
+  <div class="blogText">
+    That's pretty much all there is to it. Events on the client-side &emdash; user clicks to make a move ('X' or 'O'), or to submit their move, or accept an invitation to play &emdash; are handled on the server, which in turn emit events back out to clients (all clients or a specific client). Data can be passed back and forth with each event, as arguments to our event-handling callback functions.
+  </div>
+
+  <div class="blogText">
+    In our case, we want to pass the game-state back and forth between one client, the server, and the other client (their opponent). We update the game-state in the server (in a game object that is saved in a global array of all current games) after each user makes a move, and then update the other client.
+  </div>
+
+  <div class="blogText">
+    Check out my <a href="https://github.com/zackstout/Tic-Tac-Toe-final">GitHub repo</a> for the full code!
   </div>
 
 
