--- a/views/templates/code.html
+++ b/views/templates/code.html
@@ -86,7 +86,7 @@
   </div>
 
   <div class="blogText">
-    As I understand it, a web socket is an immediate and continuous connection between a server and the various clients that are pinging it. This means that we can update each user's client based on information in the server &emdash; without the user needing to refresh their browser.
+    As I understand it, a web socket is an immediate and continuous connection between a server and the various clients that are pinging it. This means that we can update each user's client based on information in the server &mdash; without the user needing to refresh their browser.
   </div>
 
   <div class="blogText">
@@ -159,7 +159,7 @@ http.listen(3000, function(){
   </div>
 
   <div class="blogText">
-    That's pretty much all there is to it. Events on the client-side &emdash; user clicks to make a move ('X' or 'O'), or to submit their move, or accept an invitation to play &emdash; are handled on the server, which in turn emit events back out to clients (all clients or a specific client). Data can be passed back and forth with each event, as arguments to our event-handling callback functions.
+    That's pretty much all there is to it. Events on the client-side &mdash; user clicks to make a move ('X' or 'O'), or to submit their move, or accept an invitation to play &mdash; are handled on the server, which in turn emit events back out to clients (all clients or a specific client). Data can be passed back and forth with each event, as arguments to our event-handling callback functions.
   </div>
 
   <div class="blogText">
