--- a/views/templates/blog.html
+++ b/views/templates/blog.html
@@ -65,6 +65,8 @@
   <div layout="row" class="blogText dates">
     <div layout="column" id="datesList" >
       <!-- <div layout="row" class="brags">1/28/18</div> -->
+      <div layout="row" class="brags">2/21/18</div>
+
       <div layout="row" class="brags">1/27/18</div>
 
       <div layout="row" class="brags">1/20/18</div>
@@ -91,11 +93,14 @@
         What Does Cartesian Skepticism Really Mean?
       </div>
 
-
+Getting Started with Socket.io
     -->
     <!-- <div layout="row" class="brags2" ng-click="bc.goPost(15)">
       Getting Started with Django</i>&emsp;<span class="tag tagC" ng-click="bc.goCode()">Code</span>
     </div> -->
+    <div layout="row" class="brags2" ng-click="bc.goPost(13)">
+      Getting Started with Socket.io</i>&emsp;<span class="tag tagC" ng-click="bc.goCode()">Code</span>
+    </div>
     <div layout="row" class="brags2" ng-click="bc.goPost(15)">
       Cardioid Animation</i>&emsp;<span class="tag tagM" ng-click="bc.goMath()">Math</span>
     </div>
