finished three-js post

--- a/views/templates/blog.html
+++ b/views/templates/blog.html
@@ -64,8 +64,8 @@
   </div>
   <div layout="row" class="blogText dates">
     <div layout="column" id="datesList" >
-      <!-- <div layout="row" class="brags">1/28/18</div> -->
       <div layout="row" class="brags">2/21/18</div>
+      <div layout="row" class="brags">2/20/18</div>
 
       <div layout="row" class="brags">1/27/18</div>
 
@@ -95,11 +95,12 @@
 
 Getting Started with Socket.io
     -->
-    <!-- <div layout="row" class="brags2" ng-click="bc.goPost(15)">
-      Getting Started with Django</i>&emsp;<span class="tag tagC" ng-click="bc.goCode()">Code</span>
-    </div> -->
+
     <div layout="row" class="brags2" ng-click="bc.goPost(13)">
       Getting Started with Socket.io</i>&emsp;<span class="tag tagC" ng-click="bc.goCode()">Code</span>
+    </div>
+    <div layout="row" class="brags2" ng-click="bc.goPost(13)">
+      Fun with Three.js and Browserify</i>&emsp;<span class="tag tagC" ng-click="bc.goCode()">Code</span>
     </div>
     <div layout="row" class="brags2" ng-click="bc.goPost(15)">
       Cardioid Animation</i>&emsp;<span class="tag tagM" ng-click="bc.goMath()">Math</span>
