--- a/styles/style.css
+++ b/styles/style.css
@@ -415,6 +415,21 @@ outline: none;
   margin-left: 30px;
 }
 
+#rightImage {
+  float: right;
+  height: 320px;
+  width: auto;
+  margin-left: 20px;
+  margin-top: 20px;
+}
+
+#leftImage {
+  float: left;
+  height: 320px;
+  width: auto;
+  margin-right: 20px;
+}
+
 
 .containerContainer {
   margin-left: 50px;
