adding new post on python and pandas

--- a/views/templates/blog.html
+++ b/views/templates/blog.html
@@ -64,7 +64,9 @@
   </div>
   <div layout="row" class="blogText dates">
     <div layout="column" id="datesList" >
-      <div layout="row" class="brags">2/21/18</div>
+      <div layout="row" class="brags">4/8/18</div>
+
+      <div layout="row" class="brags">2/25/18</div>
       <div layout="row" class="brags">2/20/18</div>
 
       <div layout="row" class="brags">1/27/18</div>
@@ -95,6 +97,9 @@
 
 Getting Started with Socket.io
     -->
+    <div layout="row" class="brags2" ng-click="bc.goPost(14)">
+      Combing through Data with Python</i>&emsp;<span class="tag tagC" ng-click="bc.goCode()">Code</span>
+    </div>
     <div layout="row" class="brags2" ng-click="bc.goPost(13)">
       Fun with Three.js and Browserify</i>&emsp;<span class="tag tagC" ng-click="bc.goCode()">Code</span>
     </div>
