--- a/views/templates/code.html
+++ b/views/templates/code.html
@@ -48,6 +48,252 @@
   <div class="blogContent" layout="column" flex="60">
 
 
+<!--
+    Ok great, add these three posts, with just a link to cellular automata demo; then figure out how to port it in (p5 + Angular, need a p5 instance); then do a Spirographs and Electronic life post (once you do the population graphs).
+
+    <hr>
+
+    <div layout="column" layout-align="center center" id="post14">
+      <div >
+        <h2 class="blogTitle">Scraping the Web and Building APIs</h2>
+      </div>
+      <div class="blogSubtitle">
+        Apr. 8, 2018
+      </div>
+    </div>
+
+    <div class="blogText">
+      We could do it with Python (with urllib), but we're going to use node-wikipediea ehre. Another example is d3.csv.
+    </div>
+
+    <div class="blogText">
+      Chemical elements?? Could also tlak about Shakespeare and get into details of data-cleaning, regex and Beautiful Soup (splitting on a or td), then use Python.
+    </div>
+
+    <div class="blogText">
+      Need to get into different versions of '-'.
+    </div>
+
+    <div class="blogText">
+      Data types, parsefloat.
+    </div>
+
+    <div class="blogText">
+      CORS issues.
+    </div>
+
+    <div class="blogText">
+
+    </div>
+
+
+
+
+
+
+
+
+
+    <hr>
+
+    <div layout="column" layout-align="center center" id="post14">
+      <div >
+        <h2 class="blogTitle">Exploring Cellular Automata</h2>
+      </div>
+      <div class="blogSubtitle">
+        Apr. 8, 2018
+      </div>
+    </div>
+
+    <div class="blogText">
+      Cellular automata are deterministic structures composed of cells that are either On or Off. If you're familiar with the Game of Life, cellular automata are a 2-dimensional version of that idea.
+    </div>
+
+    <div class="blogText">
+      Cellular automata can be thought of as worlds. Each world is composed of rows, and each row is composed of cells. Each cell is either On or Off, black or white.
+    </div>
+
+    <div class="blogText">
+      Whether a given cell is turned On or Off depends on the previous row. In particular, it depends on the three cells in the previous row that are adjacent to the cell in question (unless the cell is on the edge, in which case it has only two adjacent parents in the previous row).
+    </div>
+
+    <div class="blogText">
+      This is the key idea: since there are only 8 possible combinations of parent cells (On-Off-Off, On-Off-On, etc.), and each combination gets mapped to either On or Off, there are exactly 2<sup>8</sup>, or 256, possible rule-sets.
+    </div>
+
+    <div class="blogText">
+      Our rule-set determines everything. It tells you what to do with a certain combination of parent elements (say, Off-Off-On). The rule-set tells you whether you turn the cell with those parents On or Off.
+    </div>
+
+    <div class="blogText">
+      We can represent each rule-set with a binary number between 0 and 255. For instance, the rule 30 is 00011110 in binary notation, because 30 = 0*1 + 1*2 + 1*4 + 1*8 + 1*16 + 0*32 + 0*64 + 0*128.
+    </div>
+
+    <div class="blogText">
+      This binary number encodes our entire rule-set. It says that 000 is mapped to 0, 001 is mapped to 1, 010 is mapped to 1, 011 is mapped to 1, and so on, working backwards through the binary representation of the rule-number.
+    </div>
+
+    <div class="blogText">
+
+    </div> -->
+
+
+
+
+
+
+
+
+
+
+    <hr>
+
+    <div layout="column" layout-align="center center" id="post14">
+      <div >
+        <h2 class="blogTitle">Combing through Data with Python</h2>
+      </div>
+      <div class="blogSubtitle">
+        Apr. 8, 2018
+      </div>
+    </div>
+
+    <div class="blogText">
+      In this post I want to describe how to use the Python library <span>Pandas</span> to explore a data-set. I also want to explain how to use <span>urllib</span> to ping an API.
+
+      <!--
+      Talk about dot notation vs brackets, initializing a dictionary
+       -->
+    </div>
+
+    <div class="blogText">
+      In other words, this post is about how to use Python to interact with existing sets of data -- directly, via CSVs, or indirectly, via an API. In a future post I'll walk through my experience with using Python to scrape the web to generate an original data-set.
+    </div>
+
+    <div class="blogText">
+      Here's the idea: we'll grab the Bechdel Test data-set from <a href="https://github.com/fivethirtyeight/data">fivethirtyeight</a>, and then we'll ping the <a href="omdbapi.com">OMDB API</a> for information about each movie's ratings. (A movie passes the Bechdel test if it depicts two female characters discussing something other than a man.)
+    </div>
+
+    <div class="blogText">
+      To get started, we'll need to grab our data. One source of easily-accessible data is FiveThirtyEight; the Bechdel data can be found <a href="https://github.com/fivethirtyeight/data/tree/master/bechdel">here</a>.
+    </div>
+
+    <div class="blogText">
+      Our data comes in the form of a CSV. Once we've moved the CSV into our project, Pandas makes it simple to read our data:
+    </div>
+
+    <pre><code layout layout-align="center center">      import pandas as pd
+      import matplotlib.pyplot as plt
+      df = pd.read_csv('movies.csv')
+      print(df.head())</code></pre>
+
+    <div class="blogText">
+      This will print out the first five rows of data. Pandas also supplies some awesome ways to preview our data (note that we should only call <span class="codeBit">plt.show</span> once):
+    </div>
+
+    <pre><code layout layout-align="center center">      from pandas.plotting import scatter_matrix
+      # Box/whisker
+      df.plot(kind='box', subplots=True, layout=(3, 3),
+        sharex=False, sharey=False)
+      plt.show()
+
+      # Histograms
+      df.hist()
+      plt.show()
+
+      # Scatter plot matrix:
+      scatter_matrix(df)
+      plt.show()</code></pre>
+
+    <div class="blogText">
+      Here are the histograms for a different dataset:
+    </div>
+
+    <div>
+      <img style="margin-left: 5%" width="90%" src="../../styles/histograms.png" alt="">
+    </div>
+
+    <div class="blogText">
+      Now we can glean what we care about: each movie's IMDB identification string (which we'll use to ping the OMDB API), and whether or not it passes the Bechdel test. We can store this information in a list of objects, or <i>dictionaries</i>.
+    </div>
+
+    <pre><code layout layout-align="center center">      imdb_ids = []
+      for index, row in df.iterrows():
+          info = dict()
+          info["id_no"] = row["imdb"]
+          info["result"] = row["binary"]
+          imdb_ids.append(info)</code></pre>
+
+    <div class="blogText">
+      Next, we'll want to grab each movie's ratings from the OMDB API. There are three sources of ratings (IMDB, Rotten Tomatoes and Metacritic), and we'll need to keep track of where each rating came from, so it will be useful to initialize six arrays (<span class="codeBit">imdb_passes</span>, <span class="codeBit">imdb_fails</span>, etc.).
+    </div>
+
+    <pre><code layout layout-align="center center">      import urllib.request, urllib.error
+      import json
+
+      for movie in imdb_ids:
+          link = "http://www.omdbapi.com/?apikey=your_key_here&i=%s"
+            % movie["imdb_id"]
+          data = json.load(urllib.request.urlopen(link))
+
+          # Loop through the array of ratings:
+          for rating in data["Ratings"]:
+              if (rating["Source"] == "Rotten Tomatoes"
+                and movie["result"] == "PASS"):
+                  val = rating["Value"]
+                  # Strip extraneous characters:
+                  val = float(val[:find("%")])
+                  rt_passes.append(val)
+              elif ...
+            </code></pre>
+
+    <div class="blogText">
+      Finally, we need to calculate the average rating from each of our six lists. Python makes this easy:
+    </div>
+
+    <pre><code layout layout-align="center center">      rt_pass_avg = sum(rt_passes)/float(len(rt_passes))
+      ...
+    </code></pre>
+
+    <div class="blogText">
+      Here are the results we get:
+    </div>
+
+    <table class="blogText" style="text-align: center">
+      <thead>
+        <th>Source</th>
+        <th>Pass Rating</th>
+        <th>Fail Rating</th>
+      </thead>
+      <tr>
+        <td>Rotten Tomatoes</td><td>60.4%</td><td>62.5%</td>
+      </tr>
+      <tr>
+        <td>IMDB</td><td>6.62/10</td><td>6.86/10</td>
+      </tr>
+      <tr>
+        <td>Metacritic</td><td>58.8%</td><td>69.5%</td>
+      </tr>
+
+    </table>
+
+    <div class="blogText">
+      There you have it. Movies that fail the Bechdel test tend to be rated more highly than movies that pass. I'll leave the question of what explains this phenomenon for another time. The point for now is that we can take a data-set, do some analysis on it, and extract a story or a pattern from it.
+    </div>
+
+    <div class="blogText">
+      Next steps involve the other dimensions of our data set -- we have budgets, years, and reasons for failing the test. The possibilities abound!
+    </div>
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -59,7 +305,7 @@
           <h2 class="blogTitle">Fun with Three.js and Browserify</h2>
         </div>
         <div class="blogSubtitle">
-          Feb. 20, 2018
+          Feb. 25, 2018
         </div>
       </div>
 
@@ -123,7 +369,7 @@
       <pre><code layout layout-align="center center">npm install browserify</code></pre>
 
       <div class="blogText">
-        It's an enjoyable library to explore; I encourage you to check it out! Here's the <a href="https://en.wikipedia.org/wiki/Menger_sponge">Menger sponge</a> viewed from inside:
+        It's an enjoyable library to explore; I encourage you to check it out! Here's the <a href="https://en.wikipedia.org/wiki/Menger_sponge">Menger sponge</a> (three iterations deep) viewed from inside:
       </div>
 
       <div layout layout-align="center center">
@@ -142,7 +388,7 @@
       <h2 class="blogTitle">Getting Started with Socket.io</h2>
     </div>
     <div class="blogSubtitle">
-      Feb. 21, 2018
+      Feb. 20, 2018
     </div>
   </div>
 
@@ -1146,6 +1392,8 @@ WOW there's a lot here. This is the set up. Can do a second post on the features
   <div class="prevPosts" layout="column" flex="12">
     <div class="allposts" layout layout-align="center center">Code Posts:</div>
     <ul class="postlist">
+      <li ng-click="cc.goToPost(14)">Combing through Data with Python</li>
+
       <li ng-click="cc.goToPost(12)">Fun with Three.js and Browserify</li>
       <li ng-click="cc.goToPost(13)">Getting Started with Socket.io</li>
       <li ng-click="cc.goToPost(11)">Building Snake</li>
