--- a/views/templates/code.html
+++ b/views/templates/code.html
@@ -158,7 +158,8 @@
     </div>
 
     <div class="blogText">
-      In this post I want to describe how to use the Python library <span>Pandas</span> to explore a data-set. I also want to explain how to use <span>urllib</span> to ping an API.
+      In this post I want to describe how to use the Python library <span class="codeBit">Pandas</span> to explore a data-set. I also want to explain how to use <span class=
+      "codeBit">urllib</span> to ping an API.
 
       <!--
       Talk about dot notation vs brackets, initializing a dictionary
@@ -170,7 +171,7 @@
     </div>
 
     <div class="blogText">
-      Here's the idea: we'll grab the Bechdel Test data-set from <a href="https://github.com/fivethirtyeight/data">fivethirtyeight</a>, and then we'll ping the <a href="omdbapi.com">OMDB API</a> for information about each movie's ratings. (A movie passes the Bechdel test if it depicts two female characters discussing something other than a man.)
+      Here's the idea: we'll grab the Bechdel Test data-set from <a href="https://github.com/fivethirtyeight/data">fivethirtyeight</a>, and then we'll ping the <a href="https://omdbapi.com">OMDB API</a> for information about each movie's ratings. (A movie passes the Bechdel test if it depicts two female characters discussing something other than a man.)
     </div>
 
     <div class="blogText">
@@ -283,17 +284,6 @@
     <div class="blogText">
       Next steps involve the other dimensions of our data set -- we have budgets, years, and reasons for failing the test. The possibilities abound!
     </div>
-
-
-
-
-
-
-
-
-
-
-
 
 
 
