adding recent projects page...finally

--- a/views/index.html
+++ b/views/index.html
@@ -3,36 +3,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <script type="text/javascript" src="vendors/angular/angular.min.js"></script>
-  <script type="text/javascript" src="vendors/angular-route/angular-route.min.js"></script>
 
-  <script src="vendors/three.min.js" charset="utf-8"></script>
-
-  <script src="vendors/angular-material.min.js" charset="utf-8"></script>
-  <script src="vendors/angular-animate.min.js" charset="utf-8"></script>
-  <script src="vendors/angular-aria.min.js" charset="utf-8"></script>
-  <script src="vendors/angular-messages.min.js" charset="utf-8"></script>
-  <link rel="stylesheet" href="vendors/angular-material.min.css">
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
-
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
-  <script src="scripts/blogservice.js" charset="utf-8"></script>
-
-
-  <script type="text/javascript" src="scripts/client.js"></script>
-  <script src="scripts/controllers/nav.js" charset="utf-8"></script>
-  <script type="text/javascript" src="scripts/controllers/about.js"></script>
-  <script type="text/javascript" src="scripts/controllers/blog.js"></script>
-  <script type="text/javascript" src="scripts/controllers/portfolio.js"></script>
-
-  <script type="text/javascript" src="scripts/controllers/code.js"></script>
-  <script type="text/javascript" src="scripts/controllers/math.js"></script>
-  <script type="text/javascript" src="scripts/controllers/other.js"></script>
-
-
-  <link rel="stylesheet" href="styles/style.css">
 
 <!-- very odd that title will not change but regular text will: ahhhhhha it was because it is looking at the *other* index! No actually it was even stranger, i ended up just changing it on github-->
   <title>Zack Stout: Personal Page</title>
@@ -40,5 +11,48 @@
 <body ng-app='app'>
   <!-- <header ng-include="'views/partials/header.html'"></header> -->
   <main ng-view></main>
+
+
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script> -->
+
+    <script type="text/javascript" src="vendors/angular/angular.min.js"></script>
+    <script type="text/javascript" src="vendors/angular-route/angular-route.min.js"></script>
+
+    <script src="vendors/three.min.js" charset="utf-8"></script>
+
+    <script src="vendors/ui-bootstrap-tpls-2.5.0.min.js" charset="utf-8"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.0/ui-bootstrap-tpls.min.js" charset="utf-8"></script> -->
+
+    <script src="vendors/angular-material.min.js" charset="utf-8"></script>
+    <script src="vendors/angular-animate.min.js" charset="utf-8"></script>
+    <script src="vendors/angular-aria.min.js" charset="utf-8"></script>
+    <script src="vendors/angular-messages.min.js" charset="utf-8"></script>
+    <link rel="stylesheet" href="vendors/angular-material.min.css">
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
+
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+    <script src="scripts/blogservice.js" charset="utf-8"></script>
+
+
+    <script src="scripts/controllers/nav.js" charset="utf-8"></script>
+    <script type="text/javascript" src="scripts/controllers/about.js"></script>
+    <script type="text/javascript" src="scripts/controllers/blog.js"></script>
+    <script type="text/javascript" src="scripts/controllers/portfolio.js"></script>
+    <script type="text/javascript" src="scripts/controllers/newportfolio.js"></script>
+    <script src="scripts/controllers/test.js" charset="utf-8"></script>
+
+    <script type="text/javascript" src="scripts/controllers/code.js"></script>
+    <script type="text/javascript" src="scripts/controllers/math.js"></script>
+    <script type="text/javascript" src="scripts/controllers/other.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/2.5.0/ui-bootstrap.min.js" charset="utf-8"></script> -->
+
+    <script type="text/javascript" src="scripts/client.js"></script>
+
+
+    <link rel="stylesheet" href="styles/style.css">
 </body>
 </html>
