--- a/styles/style.css
+++ b/styles/style.css
@@ -15,6 +15,21 @@
   /*background-color: blue;*/
 }
 
+.recProj {
+  font-size: 20px;
+  font-family: Garamond;
+  margin: 24px;
+}
+
+.projs {
+  color: blue;
+
+}
+
+.projs:hover {
+  cursor: pointer;
+}
+
 .quotes {
   margin-left: 65px;
   margin-top: 45px;
@@ -278,7 +293,7 @@ hr {
   width: 100%;
   height: 50px;
   color: #ffce00;
-  padding-top: 26px;
+  padding-top: 5px;
   padding-left: 30px;
 }
 
