upping font and images

--- a/views/templates/newportfolio.html
+++ b/views/templates/newportfolio.html
@@ -11,13 +11,13 @@
   }
 
   li {
-    font-size: 17px;
+    font-size: 19px;
     padding: 4.5px 0px;
   }
 
   img {
     /*align-content: center;*/
-    width: 500px;
+    width: 70%;
     padding: 20px;
   }
 
